@@ -1,4 +1,4 @@
-PLY (Python Lex-Yacc)                   Version 2.4  (February 18, 2007)
+PLY (Python Lex-Yacc)                   Version 2.4  (December, 2007)
 
 David M. Beazley (dave@dabeaz.com)
 
